# Agentic-Vision-Intelligence-Platform

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: __init__.py
src/: __init__.py
src/input/: __init__.py  base.py  camera.py  image.py  video.py
src/memory/: __init__.py  event_timeline.py  scene_state.py  session_store.py
src/orchestration/: __init__.py  graph.py  nodes.py  state.py
src/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  ollama_provider.py  openai_provider.py
src/reasoning/: __init__.py  prompts.py  reasoner.py
src/reporting/: __init__.py  alerts.py  exporter.py
src/ui/: streamlit_app.py
src/utils/: __init__.py  frame_utils.py
src/vision/: __init__.py  detector.py  events.py  models.py
tests/: conftest.py  test_config.py  test_events.py  test_input.py  test_integration.py  test_memory.py  test_orchestration.py  test_providers.py  test_reporting.py  test_security.py  test_session_store.py  test_utils.py  test_vision.py
